2009-03-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* db.c, debug.c, debug.h, dir.c, elt-dirs.c, hash.c, pathsearch.c,
	progname.c, tex-file.c, variable.c:
	Rename KPSE_DEBUG_P into KPATHSEA_DEBUG_P (using kpse->debug)
	Define KPSE_DEBUG_SET and KPSE_DEBUG_P (using kpathsea_debug)
	compatible with old API.

2009-03-12  Taco Hoekwater  <taco@luatex.org>

	New Kpathsea API: Make libkpathsea reenterable.

	* src/texk/kpathsea/extend-fname.c, src/texk/kpathsea/file-p.c,
	src/texk/kpathsea/xftello.c, src/texk/kpathsea/make-suffix.c,
	src/texk/kpathsea/xcalloc.c, src/texk/kpathsea/line.c,
	src/texk/kpathsea/readlink.c, src/texk/kpathsea/concat3.c,
	src/texk/kpathsea/line.h, src/texk/kpathsea/str-llist.c,
	src/texk/kpathsea/kpsestat.c, src/texk/kpathsea/xmalloc.c,
	src/texk/kpathsea/str-llist.h, src/texk/kpathsea/xbasename.c,
	src/texk/kpathsea/xfseeko.c, src/texk/kpathsea/xgetcwd.c,
	src/texk/kpathsea/concat.c, src/texk/kpathsea/xstat.h,
	src/texk/kpathsea/atou.c, src/texk/kpathsea/rm-suffix.c,
	src/texk/kpathsea/str-list.c, src/texk/kpathsea/find-suffix.c,
	src/texk/kpathsea/hash.c, src/texk/kpathsea/xfseek.c,
	src/texk/kpathsea/debug.c, src/texk/kpathsea/str-list.h,
	src/texk/kpathsea/hash.h, src/texk/kpathsea/xopendir.c,
	src/texk/kpathsea/uppercasify.c, src/texk/kpathsea/debug.h,
	src/texk/kpathsea/xopendir.h, src/texk/kpathsea/xftell.c,
	src/texk/kpathsea/xfopen.c, src/texk/kpathsea/access.c,
	src/texk/kpathsea/fn.c, src/texk/kpathsea/xdirname.c,
	src/texk/kpathsea/fn.h, src/texk/kpathsea/xstrdup.c,
	src/texk/kpathsea/xrealloc.c, src/texk/kpathsea/xstat.c:
	All of these files have stopped using the PxC and PxH macros.

	Besides this change, there are a few extra changes to specific
	files.

	* debug.c: add a guard that disables debug reporting if
	the oldinterface is not compiled in the library, and uses the
	kpse_def_inst structure otherwise.

	* hash.c (hash_free): new function.

	* concat3.c: now allows the second and third argument to be NULL
