@@ -1,3 +1,11 @@
+2009-03-17  Taco Hoekwater  <taco@luatex.org>
+
+	* types.h: Define kpse_debug_hash_lookup_int.
+
+2009-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* c-std.h, getopt.h: Avoid non-prototype declarations for C++.
+
 2009-03-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* db.c, debug.c, debug.h, dir.c, elt-dirs.c, hash.c, pathsearch.c,
